# napari-chunk-inspector

./: README.md  pyproject.toml
src/napari_chunk_inspector/: __init__.py  _widget.py  napari.yaml
src/napari_chunk_inspector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
